--- a/gallery.html
+++ b/gallery.html
@@ -2,16 +2,18 @@
 <html>
 <head>
 <meta charset="utf-8" />
-<link rel="stylesheet" type="text/css" href="tutorial.css"></link>
+<link rel="stylesheet" type="text/css" href="gallery.css"></link>
 <title>test canvas</title>
 </head>
-<body><div id="hola"></div>
+<body>
 <div id="container">
+<div id="canvasWrapper">
 <div id="izq" class="flecha"></div>
-<canvas id="gallery" width="400" height="400" style="border:1px solid;"></canvas>
+<canvas id="gallery" width="960" height="600" style="border:1px solid;"></canvas>
 <div id="der" class="flecha"></div>
 </div>
-<img id="cesta" style="display:none" src="k.jpg"></img>
+</div>
+<img id="cesta" style="display:none" src="test.jpg"></img>
 <script type="text/javascript" src="gallery.js"></script>
 </body>
 </html>
