--- a/gallery.html
+++ b/gallery.html
@@ -13,7 +13,7 @@
 <div id="der" class="flecha"></div>
 </div>
 </div>
-<img id="cesta" style="display:none" src="test.jpg"></img>
+<img id="cesta" style="display:none" src="gallery.jpg"></img>
 <script type="text/javascript" src="gallery.js"></script>
 </body>
 </html>
