--- a/gallery.html
+++ b/gallery.html
@@ -5,7 +5,7 @@
 <link rel="stylesheet" type="text/css" href="gallery.css"></link>
 <title>test canvas</title>
 </head>
-<body>
+<body id="body">
 <div id="container">
 <div id="canvasWrapper">
 <div id="izq" class="flecha"></div>
