stop when hovering canvas

--- a/gallery.html
+++ b/gallery.html
@@ -12,7 +12,9 @@
 <canvas id="gallery" width="860" height="600" style="border:1px solid;"></canvas>
 <div id="der" class="flecha"></div>
 </div>
+<div id="debug"></div>
 </div>
+
 <img id="cesta" style="display:none" src="gallery.jpg"></img>
 <script type="text/javascript" src="gallery.js"></script>
 </body>
